--- a/config/settings.template.json
+++ b/config/settings.template.json
@@ -3,6 +3,10 @@
   "theme": "tokyo-night",
   "custom_themes": [],
   "expanded_nodes": [],
+  "process_worker": true,
+  "process_worker_warm_on_idle": true,
+  "process_worker_auto_shutdown_s": 0,
+  "ui_stall_watchdog_ms": 0,
   "allow_plaintext_credentials": false,
   "mock": {
     "enabled": true,
